# i8080-spaceinvaders-emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  input.cfg
.github/workflows/: release.yml
src/: disassembler.c  disassembler.h  display.c  display.h  emulator.c  emulator.h  hexdump.c  hexdump.h  i8080.c  i8080.h  input.c  input.h  interface.c  io.c  io.h  main.c  memory.c  memory.h  opcodes.c  opcodes.h
src/emulator/: disassembler.c  disassembler.h  memory.c  memory.h  opcodes.c  opcodes.h
src/machine/: emulator.c  hexdump.c  hexdump.h
src/platform/: display.c  input.c  platform.c  platform.h
